# Wormhole

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  pyproject.toml
tests/: test_daemon.py  test_llm.py  test_mcp_server.py  test_multi_watcher.py  test_project_registry.py  test_redact.py  test_watcher.py  test_wormhole.py
wormhole/: __init__.py  cli.py  compiler_base.py  compiler_claude.py  compiler_cursor.py  config.py  daemon.py  harvester_base.py  harvester_claude.py  llm.py  manifest.py  mcp_server.py  project_registry.py  redact.py  scoring.py  utils.py  vault.py  watcher.py
