[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wormhole-ai"
version = "0.2.0.0"
description = "Universal project intelligence for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39.0"]

[project.scripts]
wormhole = "wormhole.cli:main"

[project.entry-points."wormhole.compilers"]
claude = "wormhole.compiler_claude:ClaudeCompiler"
cursor = "wormhole.compiler_cursor:CursorCompiler"

[project.entry-points."wormhole.harvesters"]
claude = "wormhole.harvester_claude:ClaudeHarvester"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["wormhole*"]
